--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,23 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- maps -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99362.50140338718!2d-77.08460604192662!3d38.899327729084455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C+DC%2C+USA!5e0!3m2!1sen!2sin!4v1487420995711" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact Form -->
+
+  <form action="#" method="post">
+      <label for="fullname">Name</label>
+      <input type="text" name="fullname" placeholder="Your name" required id="fullname">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Your Email" required>
+      <label for="phone">Phone</label>
+      <input type="tel" id="phone" name="phone" placeholder="Your Phone (optional)">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" row="10"></textarea>
+      <input type="submit" value="send">
+  </form>
+
 </body>
 </html>
